src/main/java/com/example/buesell/errors/strategy/ErrorStrategy.java
package com.example.buesell.errors.strategy;

public interface ErrorStrategy {
    String handleError();
}
